objects/sfsiPoll__Poll_Response__c.object
<CustomObject>
    <description>User&apos;s response for the poll</description>
    <fields>
        <fullName>Comments_Conditions__c</fullName>
        <label>Comments / Conditions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Poll Responses</relationshipLabel>
        <relationshipName>Poll_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsiPoll__Poll_Option__c</fullName>
        <label>Poll Option</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected option is not associated with the question.</errorMessage>
            <filterItems>
                <field>sfsiPoll__Poll_Option__c.sfsiPoll__Poll_Question__c</field>
                <operation>equals</operation>
                <valueField>$Source.sfsiPoll__Poll_Question__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>sfsiPoll__Poll_Option__c</referenceTo>
        <relationshipLabel>Poll Responses</relationshipLabel>
        <relationshipName>Poll_Responses</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sfsiPoll__Poll_Question__c</fullName>
        <label>Poll Question</label>
        <referenceTo>sfsiPoll__Poll_Question__c</referenceTo>
        <relationshipLabel>Poll Responses</relationshipLabel>
        <relationshipName>Poll_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Poll Response</label>
    <nameField>
        <displayFormat>Poll-Resp-{00000}</displayFormat>
        <label>Poll Response #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Poll Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>